# randtools

./: .gitignore  README.md  pyproject.toml
randtools/: __init__.py  paginator.py  paginator.pyi  tools.py
tests/: test_paginator.py
