[tool.poetry]
name = "randtools"
version = "1.0.0"
description = "Tools that I use in my various other projects"
authors = ["Ajay Ratnam <ajayratnam.satheesh@gmail.com>"]
maintainers = ["Ajay Ratnam <ajayratnam.satheesh@gmail.com>"]
homepage = 'https://github.com/ajratnam/randtools'
documentation = 'https://github.com/ajratnam/randtools'
repository = 'https://github.com/ajratnam/randtools'
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
